fix: page height issues caused by browser address bar on mobile devices

--- a/src/styles/common/commonModal.less
+++ b/src/styles/common/commonModal.less
@@ -95,7 +95,7 @@
     top: 0;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    min-height: 100%;
     min-width: 100% !important;
     display: flex;
     flex-direction: column-reverse;
